# Physara

./: .gitignore  CMakeLists.txt  README.md
Backend/: CMakeLists.txt
Backend/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLCommandList.cpp  OpenGLCommandList.hpp  OpenGLDevice.cpp  OpenGLDevice.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImGuiBackend.cpp  OpenGLImGuiBackend.hpp  OpenGLPipeline.cpp  OpenGLPipeline.hpp  OpenGLSampler.cpp  OpenGLSampler.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLTypeMapping.hpp
Editor/: CMakeLists.txt
Editor/Camera/: EditorCamera.cpp  EditorCamera.hpp
Editor/Core/: EditorApp.cpp  EditorApp.hpp  EditorContext.cpp  EditorContext.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorTheme.cpp  EditorTheme.hpp  IconManager.cpp  IconManager.hpp  ShortcutRegistry.cpp  ShortcutRegistry.hpp
Editor/Panels/: ComponentDrawer.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  HelpShortcutsPanel.cpp  HelpShortcutsPanel.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  LogPanel.cpp  LogPanel.hpp  RendererSettingsPanel.cpp  RendererSettingsPanel.hpp  SceneViewPanel.cpp  SceneViewPanel.hpp
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Time.cpp  Time.hpp
Engine/RHI/: RHIDefinitions.hpp
Engine/RHI/Command/: RHICommandList.hpp
Engine/RHI/Core/: IImGuiBackend.hpp  RHIDevice.hpp
Engine/RHI/Descriptors/: RHIBufferDesc.hpp  RHISamplerDesc.hpp  RHITextureDesc.hpp
Engine/RHI/Pipeline/: RHIFramebuffer.hpp  RHIPipelineState.hpp  RHIRenderPassDesc.hpp
Engine/RHI/Resource/: RHIBuffer.hpp  RHISampler.hpp  RHIShader.hpp  RHITexture.hpp
Engine/Renderer/: FrameData.cpp  FrameData.hpp  PipelineStateCache.cpp  PipelineStateCache.hpp  RenderProxy.cpp  RenderProxy.hpp  RenderView.cpp  RenderView.hpp  Renderer.cpp  Renderer.hpp  RendererCapture.cpp  RendererCapture.hpp
Engine/Renderer/Passes/: ForwardOpaquePass.cpp  ForwardOpaquePass.hpp  ForwardTransparentPass.cpp  ForwardTransparentPass.hpp  PostProcessPass.cpp  PostProcessPass.hpp  SkyboxPass.cpp  SkyboxPass.hpp
Engine/Renderer/RenderGraph/: PassNode.cpp  PassNode.hpp  RGBuilder.cpp  RGBuilder.hpp  RenderGraph.cpp  RenderGraph.hpp  ResourceNode.cpp  ResourceNode.hpp
Engine/Resource/: AssetManager.cpp  AssetManager.hpp  AssetPath.cpp  AssetPath.hpp  BuiltinPrimitives.cpp  BuiltinPrimitives.hpp  Handle.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp
Engine/Resource/Loaders/: GLTFLoader.cpp  GLTFLoader.hpp  (+4 more)
Engine/Scene/: Entity.cpp  Entity.hpp  EntityId.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Platform/: CMakeLists.txt
Platform/FileSystem/: FileSystem.cpp  FileSystem.hpp
Platform/Input/: GLFWInput.cpp  GLFWInput.hpp  IInput.hpp  KeyCodes.hpp
Platform/Window/: GLFWWindowContext.hpp  GLFWWindowOpenGL.cpp  GLFWWindowOpenGL.hpp  IWindow.hpp
(+36 files in other folders)
